added styles, fixed bugs, fixed navbar

--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -9,7 +9,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
-
+ <link href="/styles/css/style.css" rel="stylesheet">
   <link href="/styles/build/main.css" rel="stylesheet">
 </head>
 
@@ -47,6 +47,7 @@
           </div>
         </div>
       </div>
+      <% include partials/_footer.ejs %>
 
 </body>
 
