--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -30,6 +30,7 @@
     <!-- /Header -->
 
     <!-- Home -->
+    
     <section id="home" class="home-section">
       <div id="video_container" class="video-bg-slider"></div>
       <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div>
@@ -40,7 +41,11 @@
             <p class="intro-text"></p>
             <div class="btn-bar">
               <a href="/events" class="btn btn-custom-outline">Find a Pup Party</a>
-              <a href='#' class="btn btn-custom-outline" data-toggle="modal" data-target="#myModal">Create a Pup Party</a>
+              <%if(user){%>
+                <a href='#' class="btn btn-custom-outline" data-toggle="modal" data-target="#myModal">Create a Pup Party</a>
+              <%}else{%>
+                <a href='/user/login' class="btn btn-custom-outline">Create a Pup Party</a>
+              <%}%>
             </div>
           </div>
           <!-- /col -->
