--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -9,6 +9,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="/styles/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/build/main.css">
 </head>
 
@@ -33,7 +34,7 @@
                       </div>
                     </p>
                     <p>
-                      <div class="input-group">                      
+                      <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
                         <input class="form-control" type="password" name="password" placeholder="Password">
                       </div>
@@ -45,6 +46,7 @@
         </div>
       </div>
     </div>
+     <% include partials/_footer.ejs %>
 </body>
 
 </html>
