--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -9,6 +9,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="/styles/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/build/main.css">
 </head>
 
@@ -61,6 +62,7 @@
         </div>
       </div>
     </div>
+    <% include partials/_footer.ejs %>
 </body>
 
 </html>
