--- a/styles/src/largedetails.scss
+++ b/styles/src/largedetails.scss
@@ -11,7 +11,7 @@
   padding: 20px 80px 0 20px;
   width: 100%;
   height: 80px;
-  background: $event-header;
+  background: $accent-color;
 ;
 }
 
@@ -96,7 +96,7 @@ a.largedetails-directions {
 }
 
 a.largedetails-eventpage {
-  background-color: $event-header;
+  background-color: $accent-color;
   border-radius: 4px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .3);
   width: 100%;
