--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -10,57 +10,61 @@
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href="/styles/build/main.css" rel="stylesheet">
+  <link href="/styles/css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <script src="/socket.io/socket.io.js"></script>
 
   <% include partials/_navbar.ejs %>
-  <div class="registerdiv">
-    <h1>
-      <%= events.title %>
-    </h1>
-    <div id="map"></div>
-    
-      <img src=<%=mapUrl%>></img>
+    <div class="registerdiv">
+      <div class="container-fluid">
+        <div class="row text-center">
+          <h1>
+            <%= events.title %>
+          </h1>
+        </div>
+        <div class="row text-left">
+          <div id="map"></div>
+          <img src=<%=mapUrl%>></img>
+        </div>
 
-      <h3>Location:
-        <%= events.location%>
-      </h3>
-      <h3>Time: <i class="fa fa-clock-o" aria-hidden="true"></i>
-        <%= moment(events.date_time).format("dddd MMMM Do YYYY") %>
-      </h3>
-      <h3>Description:
-        <%= events.description %>
-          </p>
-          <%if (events.event_restriction) { %>
-            <h3>
-              <%= events.event_restriction%>
-            </h3>
-            <% } %>
-              <h3>Pup-pals coming</h3>
-              <% users.forEach((item) => {%>
-                <% include partials/_event_goer.ejs %>
+        <h3>Location:
+          <%= events.location%>
+        </h3>
+        <h3>Time: <i class="fa fa-clock-o" aria-hidden="true"></i>
+          <%= moment(events.date_time).format("dddd MMMM Do YYYY") %>
+        </h3>
+        <h3>Description:
+          <%= events.description %>
+            </p>
+            <%if (events.event_restriction) { %>
+              <h3>
+                <%= events.event_restriction%>
+              </h3>
+              <% } %>
+                <h3>Pup-pals coming</h3>
+                <% users.forEach((item) => {%>
+                  <% include partials/_event_goer.ejs %>
                   <%if(item.pups.length != 0){%>
                     <p>And their pups</p>
-                    <% item.pups.forEach((item) => {%>
+                      <% item.pups.forEach((item) => {%>
                       <% include partials/_event_pup.ejs %>
-                        <% })%>
-                          <%}%>
-                            <h4>~~~~Some kind of cut-off line~~~~~</h4>
-                            <% })%>
-
-                              <div id="react-root">
-
-                              </div>
+                    <% })%>
+                    <%}%>
+                  <h4>~~~~Some kind of cut-off line~~~~~</h4>
+                  <% })%>
+          <div id="react-root">
+          </div>
+      </div>
     </div>
 
     <% if (process.env.NODE_ENV === 'production') { %>
       <script src="/chatReact/chat.js"></script>
       <% } else { %>
         <script src="http://localhost:10001/chat.js"></script>
-        <% } %>
-          <% include partials/_footer.ejs %>
+      <% } %>
+      <% include partials/_footer.ejs %>
 </body>
 
 </html>
