--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -11,6 +11,8 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
  <link href="/styles/css/style.css" rel="stylesheet">
   <link href="/styles/build/main.css" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -35,7 +37,10 @@
           </div>
           <div class="col-md-6 text-center">
             <% const owner = person %>
-                <% include partials/_owner.ejs %>
+            <% include partials/_owner.ejs %>
+            <style>
+              .owner-avatar {width: 300px!important;}
+            </style>  
           </div>
           <div class="col-md-3 text-center">
             <div class="profile_sidebar">
