--- a/server/views/partials/_owner.ejs
+++ b/server/views/partials/_owner.ejs
@@ -1,8 +1,12 @@
-<div class="owner-card">
-  <div class="owner-box">
-      <img class="owner-avatar" src="<%= owner.avatar_url %>" style="width:300px" style="height:300px">
-      <h2 class="listContent"><%= owner.username %></h2>
-      <h4><%= owner.name %></h4>
-      <p><%= owner.status %></p>
-    </div>
+<div class="owner-box">
+  <img class="owner-avatar" src="<%= owner.avatar_url %>" style="width:200px">
+  <h2 class="listContent">
+    <%= owner.username %>
+  </h2>
+  <h4>
+    <%= owner.name %>
+  </h4>
+  <p>
+    <%= owner.status %>
+  </p>
 </div>
