--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -9,12 +9,21 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
+  <script
+    src="https://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+    crossorigin="anonymous"></script>
   <link href="/styles/build/main.css" rel="stylesheet">
-  <script type="text/javascript" src="/scripts/owner_profile.js"></script>
+  <script src="/styles/js/owner-profile.js"></script>
+
 </head>
 
 <body>
   <% include partials/_navbar.ejs %>
+  <script>var status = <%- JSON.stringify(person.status) %></script>
+  <div>
+
+  </div>
     <div class="registerdiv">
       <div class="container-fluid">
         <div class="row">
@@ -36,7 +45,19 @@
           <div class="col-md-6 text-center">
             <% const owner = person %>
                 <% include partials/_owner.ejs %>
+            <% if (user && user.id == profileId) { %>
+            <section class="new-tweet">
+              <h2>Update your status</h2>
+              <form class="status-form" method="POST" action= "/owner/<%= person.id %>">
+                <textarea name="text" placeholder="Ehhh What's up Doc?"></textarea>
+                <input type="submit" value="Update">
+                <span class="counter">140</span>
+              </form>
+            </section>
+            <% } %>
           </div>
+
+
           <div class="col-md-3 text-center">
             <div class="profile_sidebar">
               <h3>Attending events </h3>
@@ -45,7 +66,9 @@
                 <% }) %>
             </div>
           </div>
+
         </div>
+
       </div>
 
 </body>
