--- a/server/views/partials/_owner.ejs
+++ b/server/views/partials/_owner.ejs
@@ -3,6 +3,7 @@
       <img class="owner-avatar" src="<%= owner.avatar_url %>" style="width:200px">
       <h2 class="listContent"><%= owner.username %></h2>
       <h4><%= owner.name %></h4>
-      <p><%= owner.status %></p>
+      <!-- class='status' is for jquery -->
+      <div class="status"><%= owner.status %></div>
     </div>
 </div>
