--- a/server/views/partials/_footer.ejs
+++ b/server/views/partials/_footer.ejs
@@ -1,7 +1,5 @@
-<body>
-  <div class="content">
-    <footer class="footer text-center">
-      <p>©2017 Pup-Pals</p>
-      <a href="#" class="back-to-top"> <i class="fa fa-chevron-up"> </i> </a>
-    </footer>
-</body>
+
+<footer class="footer text-center navbar-fixed-bottom">
+  <p>©2017 Pup-Pals</p>
+  <a href="#" class="back-to-top"> <i class="fa fa-chevron-up"> </i> </a>
+</footer>
