--- a/styles/src/owner_profile.scss
+++ b/styles/src/owner_profile.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 70px;
   right: 0;
-  bottom: 0;
+  bottom: 60px;
   z-index: 100;
   background: #fff;
   left: auto;
@@ -17,7 +17,7 @@
   position: fixed;
   top: 70px;
   left: 0;
-  bottom: 0;
+  bottom: 60px;
   z-index: 100;
   background: #fff;
   right: auto;
