Adds feature - user can add pet updates

--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -24,7 +24,7 @@
           <hr>
           <style>
             .owner-avatar {width: 100px!important;}
-          </style> 
+          </style>
 
           </div>
         </div>
@@ -32,7 +32,20 @@
           <% include partials/_puppy.ejs %>
           <style>
             .pup-pic {width: 300px!important;}
-          </style> 
+          </style>
+          <% statuses.forEach ((status) => {%>
+            <p> <%= moment(status.created_at).format("ddd MMMM Do YYYY") %> <%= moment(status.created_at).format("h:mm a") %> <%= status.content %>
+          <% })%>
+          <% if (user && user.id == person[0].id) { %>
+          <section class="new-status">
+            <h2>Update pup's status</h2>
+            <form class="status-form" method="POST" action= "/pet/<%= pup.id %>">
+              <textarea name="text" placeholder="Ehhh What's up Doc?"></textarea>
+              <input type="submit" value="Update">
+              <span class="counter">140</span>
+            </form>
+          </section>
+          <% } %>
         </div>
         <div class="col-md-3 text-right">
           <div class="profile_sidebar">
