--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -10,3 +10,4 @@
 @import "login-signup";
 @import "../../search-client/node_modules/react-day-picker/lib/style";
 @import "owner_profile";
+@import "puppy_profile";
