--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -16,7 +16,7 @@
   <!-- Custom styles for this template -->
   <link href="/styles/css/style.css" rel="stylesheet">
   <link href="/styles/build/main.css" rel="stylesheet">
-</head>
+  <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
 
 <body data-spy="scroll" data-offset="80">
   <!-- Preloader -->
