--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -9,11 +9,18 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href="/styles/build/main.css" rel="stylesheet">
-   <link href="/styles/css/style.css" rel="stylesheet">
+  <link href="/styles/css/style.css" rel="stylesheet">
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+  <script src="/styles/js/pet-profile.js"></script>
+
 </head>
 
 <body>
   <% include partials/_navbar.ejs %>
+  <script>var id = <%- JSON.stringify(pup.id) %></script>
   <div class="registerdiv">
     <div class="container-fluid">
       <div class="row">
