--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -16,6 +16,7 @@
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
     crossorigin="anonymous"></script>
   <script src="/styles/js/owner-profile.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/locale/ca.js">
 
 </head>
 
