--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -15,6 +15,7 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
   <script src="/styles/js/pet-profile.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js">
 
 </head>
 
