--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -45,14 +45,14 @@
             </div>
           </div>
           <div class="col-md-6 text-center">
+             <button class="edit btn">Update profile</button>
 
             <% const owner = person %>
             <% include partials/_owner.ejs %>
-            <% if (user && user.id == profileId) { %>
+
              <div class="edit-profile">
                <% include partials/_edit_owner_profile.ejs%>
-             <div>
-            <% } %>
+             </div>
             <div class='status'></div>
             <style>
               .owner-avatar {width: 300px!important;}
