--- a/server/views/partials/_owner.ejs
+++ b/server/views/partials/_owner.ejs
@@ -1,5 +1,5 @@
 <div class="owner-box">
-  <img class="owner-avatar" src="<%= owner.avatar_url %>" style="width:200px">
+  <img class="owner-avatar" src="<%= owner.avatar_url %>">
   <h2 class="listContent">
     <%= owner.username %>
   </h2>
