--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -45,15 +45,19 @@
             </div>
           </div>
           <div class="col-md-6 text-center">
+          <%if(user && user.id == profileId){%>
              <button class="edit btn">Update profile</button>
-
-            <% const owner = person %>
+             <button class="back btn">Back to profile</button>
+          <%}%>
             <div class="profile">
             </div>
-
+             <%if(user && user.id == profileId){%>
              <div class="edit-profile">
                <% include partials/_edit_owner_profile.ejs%>
              </div>
+             <%}%>
+            <i class="fa quote fa-quote-left" aria-hidden="true"></i>
+            <i class="fa quote fa-quote-right" aria-hidden="true"></i>
             <div class='status'></div>
             <style>
               .owner-avatar {width: 300px!important;}
