--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -11,10 +11,10 @@
 
   <link href="/styles/build/main.css" rel="stylesheet">
   <link href="/styles/css/style.css" rel="stylesheet">
-  <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+ <script
+   src="https://code.jquery.com/jquery-2.2.4.min.js"
+   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+   crossorigin="anonymous"></script>
   <script src="/styles/js/pet-profile.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js">
 
@@ -38,7 +38,13 @@
           </div>
         </div>
         <div class="col-md-6 text-center">
-          <% include partials/_puppy.ejs %>
+          <button class="edit btn">Update profile</button>
+          <button class="back btn">Back to profile</button>
+          <div class="edit-profile" style="display: none">
+          <% include partials/_edit_pet_profile.ejs %>
+          </div>
+          <div class="profile">
+          </div>
           <style>
             .pup-pic {width: 300px!important;}
           </style>
