add inital styles for event detail page

--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -11,3 +11,4 @@
 @import "../../search-client/node_modules/react-day-picker/lib/style";
 @import "owner_profile";
 @import "puppy_profile";
+@import "event_detail";
