--- a/styles/src/owner_profile.scss
+++ b/styles/src/owner_profile.scss
@@ -1,4 +1,4 @@
-.profile_sidebar {
+.right_sidebar {
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
   position: fixed;
   top: 70px;
@@ -29,7 +29,6 @@
 .owner-avatar {
   border-radius: 100px;
   margin-top: 50px;
-  border: 1px solid lightgrey;
 
 }
 
