--- a/styles/src/emoji.scss
+++ b/styles/src/emoji.scss
@@ -12,6 +12,7 @@
   border: 1px solid #d9d9d9;
   border-radius: 5px;
   background: #fff;
+  max-width: 340px;
 }
 
 .emoji-mart .emoji-mart-emoji {
@@ -21,11 +22,13 @@
 .emoji-mart-bar {
   border: 0 solid #d9d9d9;
 }
+
 .emoji-mart-bar:first-child {
   border-bottom-width: 1px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
+
 .emoji-mart-bar:last-child {
   border-top-width: 1px;
   border-bottom-left-radius: 5px;
@@ -48,6 +51,7 @@
   overflow: hidden;
   transition: color .1s ease-out;
 }
+
 .emoji-mart-anchor:hover,
 .emoji-mart-anchor-selected {
   color: #464646;
@@ -59,8 +63,10 @@
 
 .emoji-mart-anchor-bar {
   position: absolute;
-  bottom: -3px; left: 0;
-  width: 100%; height: 3px;
+  bottom: -3px;
+  left: 0;
+  width: 100%;
+  height: 3px;
   background-color: #464646;
 }
 
@@ -85,6 +91,7 @@
   margin-top: 6px;
   padding: 0 6px;
 }
+
 .emoji-mart-search input {
   font-size: 16px;
   display: block;
@@ -106,8 +113,10 @@
   z-index: 0;
   content: "";
   position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: #f4f4f4;
   border-radius: 100%;
 }
@@ -141,12 +150,15 @@
   padding-top: 70px;
   color: #858585;
 }
+
 .emoji-mart-no-results .emoji-mart-category-label {
   display: none;
 }
+
 .emoji-mart-no-results .emoji-mart-no-results-label {
   margin-top: .2em;
 }
+
 .emoji-mart-no-results .emoji-mart-emoji:hover:before {
   content: none;
 }
@@ -169,7 +181,8 @@
 }
 
 .emoji-mart-preview-data {
-  left: 68px; right: 12px;
+  left: 68px;
+  right: 12px;
   word-break: break-all;
 }
 
@@ -186,9 +199,10 @@
   font-size: 12px;
   color: #888;
 }
-.emoji-mart-preview-shortname + .emoji-mart-preview-shortname,
-.emoji-mart-preview-shortname + .emoji-mart-preview-emoticon,
-.emoji-mart-preview-emoticon + .emoji-mart-preview-emoticon {
+
+.emoji-mart-preview-shortname+.emoji-mart-preview-shortname,
+.emoji-mart-preview-shortname+.emoji-mart-preview-emoticon,
+.emoji-mart-preview-emoticon+.emoji-mart-preview-emoticon {
   margin-left: .5em;
 }
 
@@ -238,23 +252,43 @@
   transition-timing-function: ease-out;
 }
 
-.emoji-mart-skin-swatch:nth-child(1) { transition-delay: 0s }
-.emoji-mart-skin-swatch:nth-child(2) { transition-delay: .03s }
-.emoji-mart-skin-swatch:nth-child(3) { transition-delay: .06s }
-.emoji-mart-skin-swatch:nth-child(4) { transition-delay: .09s }
-.emoji-mart-skin-swatch:nth-child(5) { transition-delay: .12s }
-.emoji-mart-skin-swatch:nth-child(6) { transition-delay: .15s }
+.emoji-mart-skin-swatch:nth-child(1) {
+  transition-delay: 0s
+}
+
+.emoji-mart-skin-swatch:nth-child(2) {
+  transition-delay: .03s
+}
+
+.emoji-mart-skin-swatch:nth-child(3) {
+  transition-delay: .06s
+}
+
+.emoji-mart-skin-swatch:nth-child(4) {
+  transition-delay: .09s
+}
+
+.emoji-mart-skin-swatch:nth-child(5) {
+  transition-delay: .12s
+}
+
+.emoji-mart-skin-swatch:nth-child(6) {
+  transition-delay: .15s
+}
 
 .emoji-mart-skin-swatch-selected {
   position: relative;
   width: 16px;
   padding: 0 2px;
 }
+
 .emoji-mart-skin-swatch-selected:after {
   content: "";
   position: absolute;
-  top: 50%; left: 50%;
-  width: 4px; height: 4px;
+  top: 50%;
+  left: 50%;
+  width: 4px;
+  height: 4px;
   margin: -2px 0 0 -2px;
   background-color: #fff;
   border-radius: 100%;
@@ -265,14 +299,32 @@
 
 .emoji-mart-skin {
   display: inline-block;
-  width: 100%; padding-top: 100%;
+  width: 100%;
+  padding-top: 100%;
   max-width: 12px;
   border-radius: 100%;
 }
 
-.emoji-mart-skin-tone-1 { background-color: #ffc93a }
-.emoji-mart-skin-tone-2 { background-color: #fadcbc }
-.emoji-mart-skin-tone-3 { background-color: #e0bb95 }
-.emoji-mart-skin-tone-4 { background-color: #bf8f68 }
-.emoji-mart-skin-tone-5 { background-color: #9b643d }
-.emoji-mart-skin-tone-6 { background-color: #594539 }
+.emoji-mart-skin-tone-1 {
+  background-color: #ffc93a
+}
+
+.emoji-mart-skin-tone-2 {
+  background-color: #fadcbc
+}
+
+.emoji-mart-skin-tone-3 {
+  background-color: #e0bb95
+}
+
+.emoji-mart-skin-tone-4 {
+  background-color: #bf8f68
+}
+
+.emoji-mart-skin-tone-5 {
+  background-color: #9b643d
+}
+
+.emoji-mart-skin-tone-6 {
+  background-color: #594539
+}
