--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -37,11 +37,13 @@
 
           </div>
         </div>
+        <% if (user && user.id == person[0].id) { %>
         <div class="col-md-6 text-center">
           <button class="edit btn">Update profile</button>
           <button class="back btn">Back to profile</button>
           <div class="edit-profile" style="display: none">
           <% include partials/_edit_pet_profile.ejs %>
+          <% } %>
           </div>
           <div class="profile">
           </div>
