fixes minor template bug

--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -11,18 +11,16 @@
 
   <link href="/styles/build/main.css" rel="stylesheet">
   <link href="/styles/css/style.css" rel="stylesheet">
-  <script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
+ <script
+   src="https://code.jquery.com/jquery-2.2.4.min.js"
+   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+   crossorigin="anonymous"></script>
   <script src="/styles/js/pet-profile.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js" />
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js">
 </head>
-
 <body>
   <% include partials/_navbar.ejs %>
-  <script>var id =  <%- JSON.stringify(pup.id) %></script>
+  <script>var id = <%- JSON.stringify(pup.id) %></script>
   <div class="registerdiv">
     <div class="container-fluid">
       <div class="row">
@@ -32,7 +30,7 @@
           <% include partials/_owner.ejs%>
           <hr>
           <style>
-            .owner-avatar {width: 200px!important;}
+            .owner-avatar {width: 100px!important;}
           </style>
 
           </div>
@@ -63,18 +61,15 @@
           </section>
           <% } %>
         </div>
-        <div class="col-md-3 text-center">
-          <div class="right_sidebar">
-            <h3>Attending events </h3>
-            <div class="seperator"></div>
-            <% events.forEach((event) => { %>
-              <% include partials/_event.ejs %>
-            <% });%>
+        <div class="col-md-3 text-right">
+          <div class="profile_sidebar">
+          <%events.forEach((event) => {%>
+            <% include partials/_event.ejs %>
+          <%});%>
           </div>
         </div>
       </div>
     </div>
   </div>
 </body>
-
 </html>
