--- a/server/views/partials/_event_pup.ejs
+++ b/server/views/partials/_event_pup.ejs
@@ -1,8 +1,6 @@
-<div class="owner-card">
-  <div class="owner-box">
-      <a class="pup" href="/pet/<%=item.id%>">
-        <img class="pup-avatar" src="<%= item.avatar_url %>" style="width:80px">
-        <h5 class="listContent"><%= item.name %></h5>
-      </a>
-  </div>
-</div>
+<span>
+  <a class="pup-link" href="/pet/<%=item.id%>">
+    <img class="pup-avatar" src="<%= item.avatar_url %>" style="width:80px" title="<%= item.name %>">
+  </a>
+</span>
+&nbsp;&nbsp;&nbsp;&nbsp;
