--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-  <title>Pup-Pals</title>
+  <title><%= person.username %></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
- <link href="/styles/css/style.css" rel="stylesheet">
+  <link href="/styles/css/style.css" rel="stylesheet">
   <link href="/styles/build/main.css" rel="stylesheet">
   <script
     src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
     crossorigin="anonymous"></script>
   <script src="/styles/js/owner-profile.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/locale/ca.js" />
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/locale/ca.js"></script>
+  <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
 </head>
 
 <body>
@@ -54,8 +54,10 @@
              </div>
              <%}%>
             <i class="fa quote fa-quote-left" aria-hidden="true"></i>
-            <i class="fa quote fa-quote-right" aria-hidden="true"></i>
-            <div class='status'></div>
+            &nbsp;&nbsp;
+            <i class='status'></i>
+            &nbsp;&nbsp;            
+            <i class="fa quote fa-quote-right" aria-hidden="true"></i>          
             <style>
               .owner-avatar {width: 300px!important;}
             </style>
