--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -11,6 +11,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href="/styles/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/build/main.css">
+  <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
 </head>
 
 <body>
