--- a/styles/src/nav.scss
+++ b/styles/src/nav.scss
@@ -15,7 +15,6 @@
     -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, .1);
     box-shadow: 0 2px 2px rgba(0, 0, 0, .1);
   }
-  height: 70px
 }
 .navbar-custom .navbar-brand {
 	font-size: 3em;
@@ -23,14 +22,13 @@
 	color: #ffffff !important;
 	font-weight: 800;
 	letter-spacing: 0.15em;
-	margin: 10px 0 0;
 	font-family: 'Roboto', sans-serif;
 }
 .navbar-custom .navbar-brand:hover {
 	color: #ffffff;
 }
 .navbar-custom .nav {
-	padding: 15px 0px;
+	padding: 8px 0;
 }
 .navbar-custom .navbar-nav>li>a {
 	color: $navbar-text;
@@ -40,7 +38,7 @@
 .navbar-custom .navbar-nav>.active>a, .navbar-custom .navbar-nav>.active>a:hover, .navbar-custom .navbar-nav>.active>a:focus,
 .navbar-custom .navbar-nav>.open>a, .navbar-custom .navbar-nav>.open>a:hover, .navbar-custom .navbar-nav>.open>a:focus,
 .navbar-custom .navbar-nav>li>a:hover, .navbar-custom .navbar-nav>li>a:focus {
-	background-color: transparent;
+  background-color: transparent;
 }
 .small .navbar-brand,.small .navbar-brand:hover{
 	color: #444  !important;
