--- a/styles/src/owner_profile.scss
+++ b/styles/src/owner_profile.scss
@@ -1,7 +1,7 @@
 .right_sidebar {
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
   position: fixed;
-  top: 70px;
+  top: 65px;
   right: 0;
   bottom: 0px;
   z-index: 100;
@@ -15,7 +15,7 @@
 .left_sidebar {
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
   position: fixed;
-  top: 70px;
+  top: 65px;
   left: 0;
   bottom: 0px;
   z-index: 100;
@@ -59,4 +59,8 @@
 
 .quote {
   display:inline;
+}
+
+.fa quote fa-quote-left {
+  display: flex
 }
