--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -45,10 +45,11 @@
           <div class="seperator"></div>          
           <h3><i class="fa fa-map-marker" aria-hidden="true"></i> Location: <%= events.location%></h3>
           <div class="seperator"></div>          
-          <h3>Description: <%= events.description %></p>
           <%if (events.event_restriction) { %>
-            <h3><%= events.event_restriction%></h3>
+            <h4><i class="fa fa-ban" aria-hidden="true"></i> Restrictions: <%= events.event_restriction%></h4>
+          <div class="seperator"></div>                    
           <% } %>
+          <h3><i class="fa fa-sticky-note" aria-hidden="true"></i> Description:<h3> <h4><%= events.description %></h4>
           <div class="seperator"></div> 
           <br>                   
           <form class="detail-rsvp" action="/events/:id" method="POST" >
