--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -3,7 +3,7 @@
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
 <script src="/styles/js/bootstrap.min.js"></script>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCq0Obk9dvvsHnE4vJit1vSuaNozXMMjBE&libraries=places"></script>
 
 <nav class="navbar navbar-default navbar-fixed-top navbar-custom small">
   <div class="container">
@@ -54,7 +54,7 @@
                       <form method="POST" action="/events/new" class="register-form" role="form">
                         <p>
                           <label for="title-input">Title</label>
-                          <input class="input form-control" type="text" name="title">
+                          <input class="input form-control" type="text" name="title" required="required">
                         </p>
                         <p>
                           <label for="event-input">Description</label>
@@ -66,15 +66,15 @@
                         </p>
                         <p>
                           <label for="location-input">Location</label>
-                          <input class="input form-control" type="text" name="location">
+                          <input id="searchTextField" class="input form-control" type="text" name="location" required="required">
                         </p>
                         <p>
                           <label for="date-input">Date</label>
-                          <input class="input form-control" type="date" name="date_time">
+                          <input class="input form-control" type="date" name="date_time" required="required">
                         </p>
                         <p>
                           <label for="time-input">Time</label>
-                          <input class="input form-control" type="time" name="date_time">
+                          <input class="input form-control" type="time" name="date_time" required="required">
                         </p>
                         <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
                       </form>
@@ -92,8 +92,16 @@
       </div>
     </div>
   <script>
-    $('.create_event').on('click',function (e){
+    $('.create_event').on('click', (e) => {
       $('#myModal').modal("show");
     });
+
+    initialize = () => {
+
+    const input = document.getElementById('searchTextField');
+    const autocomplete = new google.maps.places.Autocomplete(input);
+    }
+
+    google.maps.event.addDomListener(window, 'load', initialize);
   </script>
 </nav>
