--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -8,7 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="/styles/css/style.css" rel="stylesheet">
+
   <link href="/styles/build/main.css" rel="stylesheet">
   <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -19,9 +19,10 @@
   <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
 
 </head>
+
 <body>
   <% include partials/_navbar.ejs %>
-  <script>var id = <%- JSON.stringify(pup.id) %></script>
+  <script>var id =  <%- JSON.stringify(pup.id) %></script>
   <div class="registerdiv">
     <div class="container-fluid">
       <div class="row">
@@ -31,21 +32,18 @@
           <% include partials/_owner.ejs%>
           <hr>
           <style>
-            .owner-avatar {width: 100px!important;}
+            .owner-avatar {width: 200px!important;}
           </style>
 
           </div>
         </div>
-        <% if (user && user.id == person[0].id) { %>
         <div class="col-md-6 text-center">
           <button class="edit btn">Update profile</button>
           <button class="back btn">Back to profile</button>
-          <div class="edit-profile" style="display: none">
-          <% include partials/_edit_pet_profile.ejs %>
-          <% } %>
+          <div class="edit-profile">
+            <% include partials/_edit_pet_profile.ejs %>
           </div>
-          <div class="profile">
-          </div>
+          <% include partials/_puppy.ejs %>
           <style>
             .pup-pic {width: 300px!important;}
           </style>
@@ -62,15 +60,18 @@
           </section>
           <% } %>
         </div>
-        <div class="col-md-3 text-right">
-          <div class="profile_sidebar">
-          <%events.forEach((event) => {%>
-            <% include partials/_event.ejs %>
-          <%});%>
+        <div class="col-md-3 text-center">
+          <div class="right_sidebar">
+            <h3>Attending events </h3>
+            <div class="seperator"></div>
+            <% events.forEach((event) => { %>
+              <% include partials/_event.ejs %>
+            <% });%>
           </div>
         </div>
       </div>
     </div>
   </div>
 </body>
+
 </html>
