--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -54,7 +54,12 @@
           <br>                   
           <form class="detail-rsvp" action="/events/:id" method="POST" >
               <input type="hidden" name="eventId" value="<%= id %>">
-              <button type="submit" class="btn btn-primary">RSVP</button>
+              <%if(!rsvped){%>
+                <button type="submit" class="btn btn-primary">RSVP</button>
+              <%}else{%>
+                <input type="hidden" name="cancel" value="<%= true %>">
+                <button type="submit" class="btn btn-primary">Cancel</button>
+              <%}%>
           </form>    
         </div>
         <div class="col-md-3 text-center">
