--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -52,15 +52,15 @@
           <h3><i class="fa fa-sticky-note" aria-hidden="true"></i> Description:<h3> <h4><%= events.description %></h4>
           <div class="seperator"></div> 
           <br>                   
-          <form class="detail-rsvp" action="/events/:id" method="POST" >
-              <input type="hidden" name="eventId" value="<%= id %>">
-              <%if(!rsvped){%>
-                <button type="submit" class="btn btn-primary">RSVP</button>
-              <%}else{%>
-                <input type="hidden" name="cancel" value="<%= true %>">
-                <button type="submit" class="btn btn-primary">Cancel</button>
-              <%}%>
-          </form>    
+          <%if(!rsvped){%>
+            <form class="detail-rsvp" action="/events/<%=id%>" method="POST" >
+              <button type="submit" class="btn btn-primary">RSVP</button>
+            </form>    
+          <%}else{%>
+            <form class="detail-rsvp" action="/events/<%=id%>/cancel" method="POST" >
+              <button type="submit" class="btn btn-primary">Cancel</button>
+            </form>    
+          <%}%>
         </div>
         <div class="col-md-3 text-center">
           <div class="detail_right_sidebar">
