--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -28,9 +28,11 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <% if(!user){%>
-          <li><a href="/user/login">Login</a></li>
-          <li><a href="/user/signup">Sign Up</a></li>
+          <li><a href="/events"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a></li>
+          <li><a href='#' class="create_event"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a></li>
+          <% if(!user){%>
+            <li><a href="/user/login">Login</a></li>
+            <li><a href="/user/signup">Sign Up</a></li>
           <%}else{%>
             <li>
               <a href="/owner/<%=user.id%>">
@@ -38,8 +40,8 @@
               <%=user.username%>
             </a>
             </li>
-            <li><a href='#' class="create_event">Create Event</a></li>
             <li><a href="/user/logout">Log out</a></li>
+            
             <div class="row">
               <div id="myModal" class="modal fade" role="dialog">
                 <div class="modal-dialog">
