--- a/server/views/partials/_event.ejs
+++ b/server/views/partials/_event.ejs
@@ -15,7 +15,7 @@
       <span class="smalldetails-rsvp">
       <% if (user) { %>
       <form action="/events/<%=event.id%>/cancel" method="POST" >
-          <button type="submit" class="btn btn-primary">CANCEL</button>
+          <button type="submit" class="btn btn-danger">Cancel</button>
       </form>
       </span>
       <span class="smalldetails-calender">
