--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -15,14 +15,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-      <span class="logo">P</span>
-      <span class="logo">u</span>
-      <span class="logo">p</span>
-      <span class="logo"><i class="fa fa-paw"></i></span>
-      <span class="logo">p</span>
-      <span class="logo">a</span>
-      <span class="logo">l</span>
-      <span class="logo">s</span>
+      <span class="logo">P U P <i class="fa fa-paw"></i> P A L S</span>
       </a>
     </div>
 
@@ -37,7 +30,7 @@
             <li><a href='#' class="create_event"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a></li>
             <li>
               <a href="/owner/<%=user.id%>">
-              <img src="<%=user.avatar_url%>" style="width:20px; height:20px">
+              <img class="nav-avatar" src="<%=user.avatar_url%>" style="width:20px; height:20px">
               <%=user.username%>
             </a>
             </li>
