--- a/server/views/404.ejs
+++ b/server/views/404.ejs
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>SORRY PAGE NOT FOUND</h1>
-  </body>
+
+<head>
+  <title>Pup-Pals</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/style.css" rel="stylesheet">
+  <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
+  <link href="/styles/build/main.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 text-center">
+        <br>
+        <p><img src="/styles/pictures/404.png" alt=""></p>
+
+        <h2><i class="fa fa-exclamation-triangle" style="color:red"></i> Page not found <small>404 error</small></h2>
+        <p>Well, this is embarrassing.
+
+          <br>
+        </p>
+
+        <p><a href="/">Click here</a> to visit our home page</p>
+
+      </div>
+
+    </div>
+
+  </div>
+</body>
+
 </html>
