--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -38,8 +38,8 @@
           </div>
         </div>
         <div class="col-md-6 text-center">
-          <button class="edit btn">Update profile</button>
-          <button class="back btn">Back to profile</button>
+          <button class="btn btn-primary edit btn">Update profile</button>
+          <button class="btn btn-primary back btn">Back to profile</button>
           <div class="edit-profile">
             <% include partials/_edit_pet_profile.ejs %>
           </div>
@@ -47,14 +47,18 @@
           <style>
             .pup-pic {width: 300px!important;}
           </style>
+          <div class="seperator"></div>
+          
           <div class='statuses'> </div>
 
           <% if (user && user.id == person[0].id) { %>
+          <div class="seperator"></div>              
           <section class="new-status">
             <h2>Update pup's status</h2>
             <form class="status-form" method="POST" action= "/pet/<%= pup.id %>">
-              <textarea name="text" placeholder="Ehhh What's up Doc?"></textarea>
-              <input type="submit" value="Update">
+              <textarea class="form-control" name="text" placeholder="Ehhh What's up Doc?"></textarea>
+              <br>
+              <input class="btn btn-primary btn-block" type="submit" value="Update">
               <span class="counter">140</span>
             </form>
           </section>
