--- a/server/views/404.ejs
+++ b/server/views/404.ejs
@@ -15,17 +15,17 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
+      <div class="col-md-4 col-md-offset-4 text-center">
+        <h1 class="oops">Oops</h1>
         <br>
         <p><img src="/styles/pictures/404.png" alt=""></p>
 
         <h2><i class="fa fa-exclamation-triangle" style="color:red"></i> Page not found <small>404 error</small></h2>
+        <br>
         <p>Well, this is embarrassing.
-
-          <br>
         </p>
-
-        <p><a href="/">Click here</a> to visit our home page</p>
+        <br>
+        <button class="btn btn-success btn-lg btn-block error-btn"><a class="error-link" href="/">Return to Home</a></button>
 
       </div>
 
