add styling on center col in owner/pup profile page

--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -40,7 +40,7 @@
               <%}%>
             </div>
           </div>
-          <div class="col-md-6 text-center">
+          <div class="col-md-6 text-center owner-profile-col">
           <%if(user && user.id == profileId){%>
              <button class="btn btn-primary edit btn">Update profile</button>
              <button class="btn btn-primary back btn">Back to profile</button>
