--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -37,7 +37,7 @@
 
           </div>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center owner-profile-col">
           <button class="btn btn-primary edit btn">Update profile</button>
           <button class="btn btn-primary back btn">Back to profile</button>
           <div class="edit-profile">
