add inital calendar (still needs work)

--- a/server/views/partials/_calendar_nav.ejs
+++ b/server/views/partials/_calendar_nav.ejs
@@ -1,11 +1,7 @@
-<script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
 <script src="/styles/js/bootstrap.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCq0Obk9dvvsHnE4vJit1vSuaNozXMMjBE&libraries=places"></script>
 
-<nav class="navbar navbar-default navbar-fixed-top navbar-custom small">
+<nav class="navbar navbar-default navbar-fixed-top navbar-custom small calendar-nav">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
