--- a/server/views/partials/_calendar_nav.ejs
+++ b/server/views/partials/_calendar_nav.ejs
@@ -83,7 +83,7 @@
       $('#myModal').modal("show");
     });
 
-    initialize = () => {
+    initialize = function(){
 
     const input = document.getElementById('searchTextField');
     const autocomplete = new google.maps.places.Autocomplete(input);
